--- a/chatbot.html
+++ b/chatbot.html
@@ -5,7 +5,7 @@
     <title>Chatbot</title>
     <!-- Google Material Symbol -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <button id="chatbot-toggler">
