--- a/chatbot.html
+++ b/chatbot.html
@@ -99,6 +99,6 @@
   <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
 </script>
 <!-- LINK CUSTOM SCRIPT -->
-  <script src="java/chatBot.js"></script>
+  <script src="chatBot.js"></script>
 </body>
 </html>
